# Protein-Digester

./: CMakeLists.txt  Makefile  README.md
src/: CMakeLists.txt  CPPDigester.cpp  fastaProtein.cpp  fastaProtein.h  fastaReader.cpp  fastaReader.h  proteinases.h
